--- a/tex-for-print/anubandha-3.tex
+++ b/tex-for-print/anubandha-3.tex
@@ -7,184 +7,592 @@
 {\Large\bf padakoVshakekx baLasalAda kaqtigaLa saMkiSxpatx sUci}
 \end{center}
 
-\begin{longtable}{ll}
-aM & aMka\\
-a & adhAyxya\\
-a.koV. & amarakoVsha\\
-akaSx.mA.u. & akaSxmAlikoVpaniSatf\\
-aji.A. & ajitAgama\\
-atha.shiKA. & athavaRshiKoVpaniSatf\\
-atha.shirasf & athavaRshiroVpaniSatf\\
-anu. & anuvAka\\
-a.ba. & anubaMdha\\
-aBi.shA. & aBijAcnxnashAkuMtalamf\\
-amaq.bi. & amaqtabiMdUpaniSatf\\
-a.viV.sA.saM. & anAdiviVrasheYvasArasaMgarxha\\
-a.sA. & anuBavasAra\\
-a.sU. & anuBavasUtarx\\
-aSATx. & aSATxdhAyxya\\
-A.pa. & AdipavaR\\
-I.u. & IshAvAshoyxVpaniSatf\\
-u.KaM. & utatxraKaMDa\\
-u.BA. & utatxraBAga\\
-u.vA.A. & utatxravAtUlAgama\\
-Qu.veV. & QugevxVda\\
-ai.u. & aitareVyoVpaniSatf\\
-kaTha.u. & kaThoVpaniSatf\\
-kA.A. & kAraNAgama\\
-kAmika & kAmikAgama\\
-kA.ru.u. & kAlAginxrudorxVpaniSatf\\
-kA.vi. & kAlidAsana vikarxmoVvaRshiVyamf\\
-ki.A. & kiraNAgama\\
-kU.pu. & kUmaRpurANa\\
-keY.u. & keYvaloyxVpaniSatf\\
-keY.sA. & keYvalayxsAra\\
-kirx.pA. & kirxyApAda\\
-kirx.sA. & kirxyAsAra\\
-keSxV.rA. & parxtayxBijAcnxhaqdayamf\\
- & (keSxVmarAjavAyxKAyxna)\\
-KaM. & KaMDa\\
-gw.kA. & gwDapAdakArikA\\
-caM.A. & caMdarxjAcnxnAgama\\
-ca.pA. & cayARpAda\\
-CAM.u. & CAMdoVgoyxVpaniSatf\\
-jA.u. & jAbAluyxpaniSatf\\
-jAcnx.A. & jAcnxnoVtatxrAgama\\
-jAcnx.pA. & jAcnxnapAda\\
-ta.parx. & tatatxvXparxkAshikA\\
-ta.parx. & tatatxrXparxdiVpikA\\
-teV.u. & teVjoVbiMdUpaniSatf\\
-teY.A. & teYtitxriVyAraNayxka\\
-teY.u. & teYtitxriVyoVpaniSatf\\
-da.u. & dakiSxNAmUtuRyxpaniSatf\\
-diV.parx. & diVkASxparxkaraNa\\
-dAvx.kirx. & dAvxdashashivaliMgAcaRnakirxyA\\
-deV.A. & deVviVkAloVtatxrAgama\\
-nAda.u. & nAdabiMdUpaniSatf\\
-niV.ru.u. & niVlarudorxVpaniSatf\\
-paM.ca. & paMDitArAdayxcaritamf\\
-paM.barx.u. & paMcabarxhomxVpaniSatf\\
-pAra.A. & pArameVshavxrAgama\\
-pAshu.A. & pAshupatAgama\\
-pu. & puTa\\
-pU.BA. & pUvaRBAga\\
-paq. & paqSaTxmf (puTa)\\
-peY.u. & peYMgaloVpaniSatf\\
-pw.A. & pwSakxrAgama\\
-parx.u. & parxshonxVpaniSatf\\
-parx.giV. & parxBugiVtA\\
-parx.jA.u. & parxsAdajAbAloVpaniSatf\\
-parx.haq. & parxtayxBijAcnxhaqdayamf\\
-baq.u. & baqhadAraNayxkoVpaniSatf\\
-baq.jA.u. & baqhajAjxbAloVpaniSatf\\
-barx.u. & barxhomxVpaniSatf\\
-barx.pu. & barxhAmxMDapurANamf\\
-barx.sU. & barxhamxsUtarxmf\\
-Ba.giV. & BagavadigxVtA\\
-Ba.jA.u. & BasamxjAbAloVpaniSatf\\
-Ba.viV.BA & BagavadigxVtA viVrasheYvaBASayxmf\\
-BA. & BAgaH\\
-makuTa & makuTAgama\\
-ma.nA.u. & mahAnArAyaNoVpaniSatf\\
-ma.BA. & mahABArata\\
-ma.samxqq. & manusamxqqti\\
-mahA.u. & mahoVpaniSatf\\
-mAM.u. & mAMDUkoyxVpaniSatf\\
-mAM.kA. & mAMDUkayxkArikA\\
-mAM.saM. & mAdhayxMdinasaMhitA\\
-muM.u. & muMDakoVpaniSatf\\
-maq.A. & maqgeVMdArxgama\\
-meYterxVya & meYterxVyoVpaniSAtf\\
-meYterxVyiV & meYterxVyuyxpaniSatf\\
-yoV.A. & yoVgajAgama\\
-yoV.rA.u. & yoVgarAjoVpaniSatf\\
-yoV.sU. & yoVgasUtarxmf\\
-yoV.pA. & yoVgapAda\\
-ra.vaM. & raGuvaMshamf\\
-ru.u. & rudorxVpaniSatf\\
-rudarx & rudArxdhAyxyaH\\
-rudarx.jA.u. & rudArxkaSxjAbAloVpaniSatf\\
-ru.haq.u. & rudarxhaqdayoVpaniSatf\\
-liM.u. & liMgoVpaniSatf\\
-liM.dhA.caM. & liMgadhAraNacaMdirxkA\\
-liM.pu. & liMgapurANamf\\
-leY.pu. & leYMgayxpurANamf\\
-va.saM. & vacanasaMgarxha\\
-vA.A. & vAtulAgama\\
-vA.kAM. & vAdakAMDa\\
-vAja.saM. & vAjasaneVmiV saMhitA\\
-vA.shU.A. & vAtulashudAdhxgama\\
-vA.saM. & vAyaviVya saMhitA\\
-videyxV.saM. & videyxVshavxra saMhitA\\
-visheV.parx. & visheVSAthaRparxkAshikA\\
-viV.A.u. & viVrAgamoVtatxramf\\
-viV.A.kw. & viVrasheYvAcArakwsutxBa\\
-viV.A.caM. & viVrasheYvAnaMda caMdirxkA\\
-viV.A.ciM. & viVrasheYvAcAra ciMtAmaNi\\
-viV.A.parx. & viVrasheYvAcAra parxdiVpikA\\
-viV.u.parx. & viVrasheYvoVtakxSaRdiVpikA\\
-viVra.u. & viVrAgamoVpaniSatf\\
-viV.dha.shi. & viVrasheYvadhamaRshiroVmaNi\\
-viV.pA. & vidAyxpAda\\
-viV.pu. & viVraBadarxpurANamf\\
-viV.parx. & viVrasheYvaparxdiVpikA\\
-viV.BA. & viVrasheYvaBASayxmf\\
-viV.mA.saM. & viVramAheVshavxrAcArasaMgarxha\\
-viV.A.u. & viVrAgamoVtatxramf\\
-viVroV.u. & viVroVpaniSatf\\
-viV.sheY.u. & viVrasheYvoVpaniSatf\\
-viV.sa.saM. & viVrasheYvasadAcArasaMgarxha\\
-veV.ciM. & veVdAMtaciMtAmaNi\\
-veV.sA.u. & veVdAMtasAroVpaniSatf\\
-veV.sA.viV.ciM. & veVdAMtasAraviVrasheYva ciMtAmaNi\\
-shaM.saM. & shaMkarasaMhitA\\
-sha.u. & sharaBoVpaniSatf\\
-sha.kw. & shabAdxthaRkwsutxBa\\
-sha.vi.da. & shakitxvishiSATxdevxYtadashaRna\\
-sha.tarx. & shatakatarxyamf\\
-shAM.vAyx. & shAMkariVvAyxKAyx\\
-shA.BA. & shAMkaraBASayx\\
-shi.ta.ra. & shivatatatxvXratAnxkara\\
-shi.da. & shivAdevxYtadapaRNa\\
-shi.maM. & shivAdevxYtamaMjariV\\
-shi.mA.pU. & shivamAnasapUjAsotxVtarxmf\\
-shi.yoV.parx. & shivayoVgaparxdiVpikA\\
-shi.ra. & shivarahasayx\\
-shiva.shi. & shivAdhikayxshiKAmaNiH\\
-shivA.sw. & shivAgamaswraBamf\\
-shi.sU. & shivasUtarxmf\\
-shu.ya.veV. & shukalxyajuveRVda\\
-sheY.u. & sheYvoVpaniSatf\\
-sheY.pa. & sheYvapariBASA.\\
-sheY.ra. & sheYvaratAnxkaraH\\
-sheY.si.diV. & sheYvasidAdhxMtadiVpikA\\
-shurxti.sA. & shurxtisAraBASayxmf\\
-shirxV.BA. & shirxVkaraBASayxmf\\
-sholxV. & sholxVka\\
-shevxV.u. & shevxVtAshavxtaroVpaniSatf\\
-saM. & saMKAyx\\
-sa. & sagaR\\
-sa.u. & sadAnaMdoVpaniSatf\\
-sa.da.saM. & savaRdashaRnasaMgarxhaH\\
-sadA.u. & sadAshivoVpaniSatf\\
-sa.pa.sholxV. & savAyxKAyxpaMcasholxVkiV\\
-savaR.A. & savaRjAcnxnoVtatxrAgamaH\\
-si.A. & sidAdhxMtAgamaH\\
-si.shi. & sidAdhxMtashiKAmaNiH\\
-si.shiKA.u. & sidAdhxMtashiKoVpaniSatf\\
-si.shi.parx. & shidAdhxMta shiKAmaNi parxvacana parxBe\\
-si.sArA. & sidAdhxMtasArAvaliV\\
-si.sheV. & sidAdhxMtasheVKaraH\\
-suparx.A. & suparxBeVdAgamaH\\
-sU.A. & sUkASxmXgamaH\\
-sUta.saM. & sUtasaMhitA\\
-soV.shaM.pa. & soVmashaMBupadadhxtiH\\
-sakxM.pu. & sakxMdapurANamf\\
-sAvx.A. & sAvxyaMBuvAgamaH\\
-ha.koV. & halAyudhakoVshaH\\
-\end{longtable}
+\medskip
+
+{
+\setlength{\columnseprule}{1pt} 
+\begin{multicols}{2}
+\begin{tabbing}
+aM\hspace{3cm} \= aMka\\[2pt]
+a \> adhAyxya\\[2pt]
+a.koV. \> amarakoVsha\\[2pt]
+akaSx.mA.u. \> akaSxmAlikoVpaniSatf\\[2pt]
+aji.A. \> ajitAgama\\[2pt]
+atha.shiKA. \> athavaRshiKoVpaniSatf\\[2pt]
+atha.shirasf \> athavaRshiroVpaniSatf\\[2pt]
+anu. \> anuvAka\\[2pt]
+a.ba. \> anubaMdha\\[2pt]
+aBi.shA. \> aBijAcnxnashAkuMtalamf\\[2pt]
+amaq.bi. \> amaqtabiMdUpaniSatf\\[2pt]
+a.viV.sA.saM. \> anAdiviVrasheYvasArasaMgarxha\\[2pt]
+a.sA. \> anuBavasAra\\[2pt]
+a.sU. \> anuBavasUtarx\\[2pt]
+aSATx. \> aSATxdhAyxya\\[2pt]
+A.pa. \> AdipavaR\\[2pt]
+I.u. \> IshAvAshoyxVpaniSatf\\[2pt]
+u.KaM. \> utatxraKaMDa\\[2pt]
+u.BA. \> utatxraBAga\\[2pt]
+u.vA.A. \> utatxravAtUlAgama\\[2pt]
+Qu.veV. \> QugevxVda\\[2pt]
+ai.u. \> aitareVyoVpaniSatf\\[2pt]
+kaTha.u. \> kaThoVpaniSatf\\[2pt]
+kA.A. \> kAraNAgama\\[2pt]
+kAmika \> kAmikAgama\\[2pt]
+kA.ru.u. \> kAlAginxrudorxVpaniSatf\\[2pt]
+kA.vi. \> kAlidAsana vikarxmoVvaRshiVyamf\\[2pt]
+ki.A. \> kiraNAgama\\[2pt]
+kU.pu. \> kUmaRpurANa\\[2pt]
+keY.u. \> keYvaloyxVpaniSatf\\[2pt]
+keY.sA. \> keYvalayxsAra\\[2pt]
+kirx.pA. \> kirxyApAda\\[2pt]
+kirx.sA. \> kirxyAsAra\\[2pt]
+keSxV.rA. \> parxtayxBijAcnxhaqdayamf\\[2pt]
+(keSxVmarAjavAyxKAyxna) \> \\[2pt]
+KaM. \> KaMDa\\[2pt]
+gw.kA. \> gwDapAdakArikA\\[2pt]
+caM.A. \> caMdarxjAcnxnAgama\\[2pt]
+ca.pA. \> cayARpAda\\[2pt]
+CAM.u. \> CAMdoVgoyxVpaniSatf\\[2pt]
+jA.u. \> jAbAluyxpaniSatf\\[2pt]
+jAcnx.A. \> jAcnxnoVtatxrAgama\\[2pt]
+jAcnx.pA. \> jAcnxnapAda\\[2pt]
+ta.parx. \> tatatxvXparxkAshikA\\[2pt]
+ta.parx. \> tatatxrXparxdiVpikA\\[2pt]
+teV.u. \> teVjoVbiMdUpaniSatf\\[2pt]
+teY.A. \> teYtitxriVyAraNayxka\\[2pt]
+teY.u. \> teYtitxriVyoVpaniSatf\\[2pt]
+da.u. \> dakiSxNAmUtuRyxpaniSatf\\[2pt]
+diV.parx. \> diVkASxparxkaraNa\\[2pt]
+dAvx.kirx. \> dAvxdashashivaliMgAcaRnakirxyA\\[2pt]
+deV.A. \> deVviVkAloVtatxrAgama\\[2pt]
+nAda.u. \> nAdabiMdUpaniSatf\\[2pt]
+niV.ru.u. \> niVlarudorxVpaniSatf\\[2pt]
+paM.ca. \> paMDitArAdayxcaritamf\\[2pt]
+paM.barx.u. \> paMcabarxhomxVpaniSatf\\[2pt]
+pAra.A. \> pArameVshavxrAgama\\[2pt]
+pAshu.A. \> pAshupatAgama\\[2pt]
+pu. \> puTa\\[2pt]
+pU.BA. \> pUvaRBAga\\[2pt]
+paq. \> paqSaTxmf (puTa)\\[2pt]
+peY.u. \> peYMgaloVpaniSatf\\[2pt]
+pw.A. \> pwSakxrAgama\\[2pt]
+parx.u. \> parxshonxVpaniSatf\\[2pt]
+parx.giV. \> parxBugiVtA\\[2pt]
+parx.jA.u. \> parxsAdajAbAloVpaniSatf\\[2pt]
+parx.haq. \> parxtayxBijAcnxhaqdayamf\\[2pt]
+baq.u. \> baqhadAraNayxkoVpaniSatf\\[2pt]
+baq.jA.u. \> baqhajAjxbAloVpaniSatf\\[2pt]
+barx.u. \> barxhomxVpaniSatf\\[2pt]
+barx.pu. \> barxhAmxMDapurANamf\\[2pt]
+barx.sU. \> barxhamxsUtarxmf\\[2pt]
+Ba.giV. \> BagavadigxVtA\\[2pt]
+Ba.jA.u. \> BasamxjAbAloVpaniSatf\\[2pt]
+Ba.viV.BA \> BagavadigxVtA viVrasheYvaBASayxmf\\[2pt]
+BA. \> BAgaH\\[2pt]
+makuTa \> makuTAgama\\[2pt]
+ma.nA.u. \> mahAnArAyaNoVpaniSatf\\[2pt]
+ma.BA. \> mahABArata\\[2pt]
+ma.samxqq. \> manusamxqqti\\[2pt]
+mahA.u. \> mahoVpaniSatf\\[2pt]
+mAM.u. \> mAMDUkoyxVpaniSatf\\[2pt]
+mAM.kA. \> mAMDUkayxkArikA\\[2pt]
+mAM.saM. \> mAdhayxMdinasaMhitA\\[2pt]
+muM.u. \> muMDakoVpaniSatf\\[2pt]
+maq.A. \> maqgeVMdArxgama\\[2pt]
+meYterxVya \> meYterxVyoVpaniSAtf\\[2pt]
+meYterxVyiV \> meYterxVyuyxpaniSatf\\[2pt]
+yoV.A. \> yoVgajAgama\\[2pt]
+yoV.rA.u. \> yoVgarAjoVpaniSatf\\[2pt]
+yoV.sU. \> yoVgasUtarxmf\\[2pt]
+yoV.pA. \> yoVgapAda\\[2pt]
+ra.vaM. \> raGuvaMshamf\\[2pt]
+ru.u. \> rudorxVpaniSatf\\[2pt]
+rudarx \> rudArxdhAyxyaH\\[2pt]
+rudarx.jA.u. \> rudArxkaSxjAbAloVpaniSatf\\[2pt]
+ru.haq.u. \> rudarxhaqdayoVpaniSatf\\[2pt]
+liM.u. \> liMgoVpaniSatf\\[2pt]
+liM.dhA.caM. \> liMgadhAraNacaMdirxkA\\[2pt]
+liM.pu. \> liMgapurANamf\\[2pt]
+leY.pu. \> leYMgayxpurANamf\\[2pt]
+va.saM. \> vacanasaMgarxha\\[2pt]
+vA.A. \> vAtulAgama\\[2pt]
+vA.kAM. \> vAdakAMDa\\[2pt]
+vAja.saM. \> vAjasaneVmiV saMhitA\\[2pt]
+vA.shU.A. \> vAtulashudAdhxgama\\[2pt]
+vA.saM. \> vAyaviVya saMhitA\\[2pt]
+videyxV.saM. \> videyxVshavxra saMhitA\\[2pt]
+visheV.parx. \> visheVSAthaRparxkAshikA\\[2pt]
+viV.A.u. \> viVrAgamoVtatxramf\\[2pt]
+viV.A.kw. \> viVrasheYvAcArakwsutxBa\\[2pt]
+viV.A.caM. \> viVrasheYvAnaMda caMdirxkA\\[2pt]
+viV.A.ciM. \> viVrasheYvAcAra ciMtAmaNi\\[2pt]
+viV.A.parx. \> viVrasheYvAcAra parxdiVpikA\\[2pt]
+viV.u.parx. \> viVrasheYvoVtakxSaRdiVpikA\\[2pt]
+viVra.u. \> viVrAgamoVpaniSatf\\[2pt]
+viV.dha.shi. \> viVrasheYvadhamaRshiroVmaNi\\[2pt]
+viV.pA. \> vidAyxpAda\\[2pt]
+viV.pu. \> viVraBadarxpurANamf\\[2pt]
+viV.parx. \> viVrasheYvaparxdiVpikA\\[2pt]
+viV.BA. \> viVrasheYvaBASayxmf\\[2pt]
+viV.mA.saM. \> viVramAheVshavxrAcArasaMgarxha\\[2pt]
+viV.A.u. \> viVrAgamoVtatxramf\\[2pt]
+viVroV.u. \> viVroVpaniSatf\\[2pt]
+viV.sheY.u. \> viVrasheYvoVpaniSatf\\[2pt]
+viV.sa.saM. \> viVrasheYvasadAcArasaMgarxha\\[2pt]
+veV.ciM. \> veVdAMtaciMtAmaNi\\[2pt]
+veV.sA.u. \> veVdAMtasAroVpaniSatf\\[2pt]
+veV.sA.viV.ciM. \> veVdAMtasAraviVrasheYva ciMtAmaNi\\[2pt]
+shaM.saM. \> shaMkarasaMhitA\\[2pt]
+sha.u. \> sharaBoVpaniSatf\\[2pt]
+sha.kw. \> shabAdxthaRkwsutxBa\\[2pt]
+sha.vi.da. \> shakitxvishiSATxdevxYtadashaRna\\[2pt]
+sha.tarx. \> shatakatarxyamf\\[2pt]
+shAM.vAyx. \> shAMkariVvAyxKAyx\\[2pt]
+shA.BA. \> shAMkaraBASayx\\[2pt]
+shi.ta.ra. \> shivatatatxvXratAnxkara\\[2pt]
+shi.da. \> shivAdevxYtadapaRNa\\[2pt]
+shi.maM. \> shivAdevxYtamaMjariV\\[2pt]
+shi.mA.pU. \> shivamAnasapUjAsotxVtarxmf\\[2pt]
+shi.yoV.parx. \> shivayoVgaparxdiVpikA\\[2pt]
+shi.ra. \> shivarahasayx\\[2pt]
+shiva.shi. \> shivAdhikayxshiKAmaNiH\\[2pt]
+shivA.sw. \> shivAgamaswraBamf\\[2pt]
+shi.sU. \> shivasUtarxmf\\[2pt]
+shu.ya.veV. \> shukalxyajuveRVda\\[2pt]
+sheY.u. \> sheYvoVpaniSatf\\[2pt]
+sheY.pa. \> sheYvapariBASA.\\[2pt]
+sheY.ra. \> sheYvaratAnxkaraH\\[2pt]
+sheY.si.diV. \> sheYvasidAdhxMtadiVpikA\\[2pt]
+shurxti.sA. \> shurxtisAraBASayxmf\\[2pt]
+shirxV.BA. \> shirxVkaraBASayxmf\\[2pt]
+sholxV. \> sholxVka\\[2pt]
+shevxV.u. \> shevxVtAshavxtaroVpaniSatf\\[2pt]
+saM. \> saMKAyx\\[2pt]
+sa. \> sagaR\\[2pt]
+sa.u. \> sadAnaMdoVpaniSatf\\[2pt]
+sa.da.saM. \> savaRdashaRnasaMgarxhaH\\[2pt]
+sadA.u. \> sadAshivoVpaniSatf\\[2pt]
+sa.pa.sholxV. \> savAyxKAyxpaMcasholxVkiV\\[2pt]
+savaR.A. \> savaRjAcnxnoVtatxrAgamaH\\[2pt]
+si.A. \> sidAdhxMtAgamaH\\[2pt]
+si.shi. \> sidAdhxMtashiKAmaNiH\\[2pt]
+si.shiKA.u. \> sidAdhxMtashiKoVpaniSatf\\[2pt]
+si.shi.parx. \> shidAdhxMta shiKAmaNi parxvacana parxBe\\[2pt]
+si.sArA. \> sidAdhxMtasArAvaliV\\[2pt]
+si.sheV. \> sidAdhxMtasheVKaraH\\[2pt]
+suparx.A. \> suparxBeVdAgamaH\\[2pt]
+sU.A. \> sUkASxmXgamaH\\[2pt]
+sUta.saM. \> sUtasaMhitA\\[2pt]
+soV.shaM.pa. \> soVmashaMBupadadhxtiH\\[2pt]
+sakxM.pu. \> sakxMdapurANamf\\[2pt]
+sAvx.A. \> sAvxyaMBuvAgamaH\\[2pt]
+ha.koV. \> halAyudhakoVshaH
+\end{tabbing}
+\end{multicols}
+}
+
 
 \vskip 1cm
+
+\begin{center}
+{\Large\bf vacana garxMthagaLa saMkiSxpatx sUci}
+\end{center}
+
+\centerline{\bf ``a''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+1. & aMga soVM-savasaM & aMgasoVMkina liMga taMdegaLa vacanagaLu & samagarx saMpuTa - 6 & \multicolumn{1}{p{3.5cm}}{kananxDa pusatxka pArxdhikAra,\newline beMgaLUru - 2001}\\
+2. & aMbiga - savasaM & aMbigara cwDayayxgaLa vacana & samagarx saMpuTa - 6 & --\\
+3. & akakxma - savasaM & akakxmahAdeVviya vacana & samagarx saMpuTa - 5 & --\\
+4. & akakxmamx - savasaM & akakxmana vacanagaLu & samagarx saMpuTa - 5 & --\\
+5. & aKaMDa - savasaM & aKaMDa maMDaleVshavxra vacanagaLu & samagarx saMpuTa - 9 & --\\
+6. & agaCxhaM - savasaM & agaCxvaNi haMpayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+7. & agaCxho - savasaM & agaCxvaNi honanxyayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+8. & ajaga - savasaM & ajagaNaNx taMdegaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+9. & anAmi - savasaM & anAmika nAcayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+10. & anuga - savasaM &  anugaleVshavxra vacanagaLu & samagarx saMpuTa - 6 & --\\
+11. & apipxdeV - savasaM & apipxdeVvayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+12. & aparxmA - savasaM & aparxmANa guheVshavxra vacanagaLu & samagarx saMpuTa - 6 & --\\
+13. & amara - savasaM & amaraguMDada malilxkAjuRna taMdegaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+14. & amugi - savasaM & amugi deVvayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+15. & amuge - savasaM & amuge rAyamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+16. & arimA - savasaM & arivina mAri taMdegaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+17. & alalxma - savasaM & alalxma parxBudeVvara vacanagaLu & samagarx saMpuTa - 7 & --\\
+18. & avareV - savasaM &  avasArada reVkaNaNxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+19. & ashavxtha - savasaM & ashavxtha rAma vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``A''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+21. & Adayayx - savasaM & AdayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & kananxDa pusatxka pArxdhikAra\\
+22. & AnaMda - savasaM & AnaMdayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+23. & AnaMsi - savasaM & AnaMda sidedxVshavxra vacanagaLu & samagarx saMpuTa - 9 & --\\
+24. & AyadxmA - savasaM & Ayadxkekx mArayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+25. & Ayadx la - savasaM & Ayadxkekx lakakxmamx vacanagaLu & samagarx saMpuTa - 5 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``i''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+26. & imamxDi - savasaM & imamxDi gurusidadhxsAvxmigaLa shUnayxmaMtarxgoVpayx vacanagaLu & samagarx saMpuTa - 11 & kananxDa pusatxka pArxdhikAra\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``I''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+27. & IshavxriV - savasaM & ?????????????? & samagarx saMpuTa - ???? & kananxDa pusatxka pArxdhikAra\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``u''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+27. &  ugaGxDi- savasaM & ugaGxDisuva gaTiTxdeVvayayxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
+28. &  upapxra - savasaM & upapxraguDiya soVmideVvayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+29. &  uriliM - savasaM & uriliMgadeVvana vacanagaLu & samagarx saMpuTa - 6 & --\\
+30. &  uripe - savasaM & uriliMga pedidxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+31. &  uripu - savasaM & uriliMga pedidxgaLa puNayxsitxrXV kAravu vacanagaLu & samagarx saMpuTa - 5 & --\\
+32. &  uLimeV - savasaM & uLiyumeVshavxra cikakxNaNxgaLa vacanagaLu & samagarx saMpuTa - 6  & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``e''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+33. &  ecacxri - savasaM &  ecacxrike kAyakada mukatxnAthayayxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
+34. &  eDema - savasaM &  eDemaThada nAgideVvayayxgaLa puNayxsitxrXV masaNamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+35. &  elegA - savasaM &  elegAra kAmaNaNxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``E''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+36. &  EkAMta - savasaM &  EkAMtarAmi taMdegaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
+37. &  EleVshavx - savasaM &  EleVshavxra keVtayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``o''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+38. &  okakxli - savasaM &  okakxliga mudadxNaNxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``ka''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+39. &  kaMbamA - savasaM &  kaMbada mAri taMdeya vacanagaLu & samagarx saMpuTa - 7  & kananxDa pusatxka pArxdhikAra\\
+40. &  kadikA - savasaM &  kadire kAyakada kALavevxyayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+41. &  kadike - savasaM &  kadiremamxvevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
+42. &  kananxDi - savasaM & kananxDi kAyakada reVmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+43. &  kananxDi - savasaM & kananxDi kAyakada amimxdeVvayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+44. &  kananxre - savasaM & kananxDi kAyakada reVmamaxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+45. &  kananxda - savasaM & kananxda mAri taMdeya vacanagaLu & samagarx saMpuTa - 7 & --\\
+46. &  karukeV - savasaM & karuLa keVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+47. &  kalakeV - savasaM & kalakeVtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+48. &  reVcavevx - savasaM & kAlakUlayayxgaLa puNayxsitxrV reVcavevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
+49. &  kAmABiV - savasaM & kAmATada BiVmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+50. &  kAlaka - savasaM & kAlakaNiNxya kAmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+51. &  kinanxri - savasaM & kinanxri barxhamxyayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+52. &  kiVlAra - savasaM & kiVlArada BiVmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+53. &  kUsina - savasaM & kUsina mAreyayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+54. &  keVtala - savasaM & guMDayayxgaLa puNayxsitxrXV keVtaladeVviya vacanagaLu & samagarx saMpuTa - 5 & --\\
+55. &  koMDema - savasaM & koMDe maMjaNagaLa puNayxsitxrXV lakaSxmXmamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+56. &  koTaTxNa - savasaM & koTaTxNaNxda siVmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+57. &  koTAra - savasaM & koTArada soVmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+58. &  koVlashAM - savasaM & koVla shAMtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``ga''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+59. &  gaMgAMbi - savasaM & gaMgAMbikeya vacanagaLu & samagarx saMpuTa - 5  & kananxDa pusatxka pArxdhikAra\\
+60. &  gajeVsha - savasaM & gajeVsha masaNayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+61. &  gajeVpu - savasaM & gajeVsha masaNayayxna puNayxsitxrXya vacanagaLu & samagarx saMpuTa - 5 & --\\
+62. &  gANada - savasaM & gANada kaNaNxpapxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+63. &  gAvudi - savasaM &  gAvudi mAcayayx vacanagaLu & samagarx saMpuTa - 7 & --\\
+64. &  gupatxmaM - savasaM & gupatx maMjaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+65. &  gumamxshA - savasaM & gumamxLApurada sidadhxliMgeVshavxrana vacanagaLu & samagarx saMpuTa - 7 & --\\
+66. &  guruma - savasaM & gurupurada malalxyayxna vacanagaLu & samagarx saMpuTa - 11 & --\\
+67. &  guruba - savasaM & guru basaveVshavxrana vacanagaLu & samagarx saMpuTa - 7 & --\\
+68. &  guruBa - savasaM & guru Bakatxyayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+69. &  gumamxLA - savasaM & gumamxLApurada sidadhxliMgadeVvara vacanagaLu & samagarx saMpuTa - 11 & --\\
+70. & gogagxvevx  - savasaM & gogagxvevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
+71. &  goVrakaSx - savasaM & goVrakaSxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``Ga''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+72. &  GanaliM - savasaM & GanaliMgi deVvara vacanagaLu & samagarx saMpuTa - 11  & kananxDa pusatxka pArxdhikAra\\
+73. &  GaTiTxvA - savasaM & GaTiTxvALayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``ca''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+74. &   caMdima - savasaM &  caMdimarasana vacanagaLu & samagarx saMpuTa - 7  & kananxDa pusatxka pArxdhikAra\\
+75. &   cenanxba - savasaM &  cenanxbasavaNaNxnavara vacanagaLu & samagarx saMpuTa - 3 & --\\
+76. &   jeVDara - savasaM &  jeVDara dAsimayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+77. &  DakekxmA - savasaM &  Dakekxya bomamxNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+78. &  turugA - savasaM &  gurugAhi rAmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+79. &  toVMTasi - savasaM & toVTada sidadhxliMga shivayoVgiya vacanagaLu & samagarx saMpuTa - 11 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``da''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+80. &  dasara - savasaM &  dasarayayxnavacanagaLu & samagarx saMpuTa - 7 & kananxDa pusatxka pArxdhikAra\\
+81. &  viVramamx - savasaM & dasarayayxna puNayxsitxrXV viVramamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+82. &  dAsoVsaM - savasaM & dAsoVhara saMgaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
+83. &  dugagxLe - savasaM & dugagxLeya vacanagaLu & samagarx saMpuTa - 5 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``na''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+84. & nagemA - savasaM &  nageya mAri taMdeya vacanagaLu & samagarx saMpuTa - 7 & kananxDa pusatxka pArxdhikAra\\
+85. & nAgalA  - savasaM & nAgalAMbikeya vacanagaLu & samagarx saMpuTa - 5 & --\\
+86. & nijagu  - savasaM & nijaguNa shivayoVgiya vacanagaLu & samagarx saMpuTa - 7 & --\\
+87. & niVlamamx  - savasaM & niVlamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+88. & nuliya  - savasaM & nuliya caMdayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``pa''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+89. & purada - savasaM &  purada nAgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
+90. & parxsAdi- savasaM & parxsAdi BoVgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``ba''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+91. & basava - savasaM & basavaNaNxnavara vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
+92. & bahurU - savasaM & bahurUpi cwDayayxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+93. & bAlasaM - savasaM & bAlasaMgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+94. & bAhUra - savasaM & bAhUra bomamxNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+95. & bibibxbA - savasaM & bibibx bAcayayxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+96. & bokakxsa - savasaM & bokakxsada cikakxNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+97. & BaritA - savasaM & BaritApaRNada cenanxbasavaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+98. & BoVgaNaNx - savasaM & BoVgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+\hline
+\end{longtable}}
+
+\centerline{\bf ``ma''}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+99. & maDimA - savasaM &  maDivALa mAcideVvara vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
+100. & manasaM - savasaM & manasaMda mAri taMdeya vacanagaLu & samagarx saMpuTa - 8 & --\\
+101. & manumu - savasaM & manumula gumamxTadeVvana vacanagaLu & samagarx saMpuTa - 8 & --\\
+102. & maruLa - savasaM & maruLa shaMkaradeVvara vacanagaLu & samagarx saMpuTa - 8 & --\\
+103. & cenanxyayx - savasaM & mAdAra cenanxyayxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+104. & dhULayayx - savasaM & mAdAra dhULayayxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+105. & mAruDi - savasaM & mAruDideya nAjayayxna vacanagaLu & samagarx saMpuTa - 8 & --\\
+106. & mukAtxya - savasaM & mukAtxyakakxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+107. & meremiM - savasaM & meremiMDayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+108. & meVdara - savasaM & meVdara keVtayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+109. & meYduna - savasaM & maiduna rAmayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+110. & moVLimA - savasaM & moVLige mAdayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
+111. & moVLima - savasaM & moVLige mahAdeVviya vacanagaLu & samagarx saMpuTa - 5 & --\\
+\hline
+\end{longtable}}
+
+{\renewcommand{\arraystretch}{1.3}
+\begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
+\hline
+\endfirsthead
+\hline
+\endhead
+\hline
+\endfoot
+\endlastfoot
+112. &  ladedxsoV - savasaM &  ladedxya soVmayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & kananxDa pusatxka pArxdhikAra\\
+113. &  vacana - savasaM & vacana BaMDAri shAMtarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
+114. &  varasaM - savasaM &  varada saMkaNaNxnavara vacanagaLu & samagarx saMpuTa - 9 & --\\
+115. &  viVrago - savasaM &  viVra golAlxLana vacanagaLu & samagarx saMpuTa - 9 & --\\
+116. & viVrashaM - savasaM &  viVra shaMkaradAsayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+117. & viVrasaM - savasaM & sidAdhxMta viVrasaMgayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+118. & veVdasaM - savasaM &  veVdamUtiR saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+119. & veYdayxsaM - savasaM &  veYdayx saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+120. & shaMkara - savasaM &  shaMkara dAsimayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+121. & shivaleM - savasaM &  shivaleMka maMdaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+122. & shAMtaviV - savasaM & shAMtaviVreVshavxrana vacanagaLu & samagarx saMpuTa - 9 & --\\
+123. & saMgameV - savasaM &  saMgameVshavxrada apapxNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+124. & sakaLeV - savasaM & sakaLeVsha mAdarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
+125. & sagabo - savasaM & sagarada bomamxNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+126. & satitxge - savasaM & satitxge kAyakada mArayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+127. & savxtaMtarx - savasaM &  savxtaMtarx sidadhxliMgeVshavxrara vacanagaLu & samagarx saMpuTa - 11 & --\\
+128. & suMkada - savasaM & suMkada baMkaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+129. & soDaDxLa - savasaM &  soDaDxLa bAcarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
+130. & haDapa - savasaM & haDapara apapxNaNxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+131. & hAvina - savasaM & hAvina deVshakalalxyayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+132. & hoDeba - savasaM & hoDeharxlalx baMkaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+133. &  kADasi - savasaM & kADasidedhxVshavxrana viVrasheYva SaTfsathxLada vacanagaLu & samagarx saMpuTa - 10 & --\\
+134. & kuSaTxgi - savasaM & kuSaTxgi karibasaveVshavxrana citatx sadagxtiya vacanagaLu & samagarx saMpuTa - 10 & --\\
+135. & kUDala - savasaM & kUDala saMgameVshavxrana vacanagaLu & samagarx saMpuTa - 10 & --\\
+136. & gaNadA - savasaM & gaNadAsi viVraNaNxna vacanagaLu & samagarx saMpuTa - 10 & --\\
+137. & jakakxNa - savasaM & jakakxNayayxna nirALa maMtarxgoVpayxda vacanagaLu & samagarx saMpuTa - 10 & --\\
+138. & deVshikeVM - savasaM & deVshikeVMdarx saMgana basavayayxna SaTfsathxla vacanagaLu & samagarx saMpuTa - 12 & --\\
+139. & paraMjoyxV - savasaM & paraMjoyxVtiyara vacanagaLu & samagarx saMpuTa - 12 & --\\
+140. & basaliM - savasaM & basavaliMgadeVvara vacanagaLu & samagarx saMpuTa - 12 & --\\
+141. & mumamxDi - savasaM & mumamxDi kAyeVMdarxna veVdasaMyoVjane vacanagaLu & samagarx saMpuTa - 13 & --\\
+142. & mUrumu - savasaM & mUrusAlara mukitxmuni viracita vacanagaLu & samagarx saMpuTa - 14 & --\\
+143. & ?????? - savasaM &  savARcAra nAgamamxna sudeV vacanagaLu & samagarx saMpuTa - 14 & --\\
+144. & SaNumxKa - savasaM & SaNumxKa sAvxmigaLa SaTfsathxla vacanagaLu & samagarx saMpuTa - 14 & --\\
+145. & heVmaga - savasaM & heVmagalalx haMpana heVmagalalx SaTfsathxla vacanagaLu & samagarx saMpuTa - 12 & --\\
+\hline
+\end{longtable}}
+
 
 \begin{center}
 {\Large\bf Akara garxMthasUciV}
